Bug 378852 - Icon view doesn't show image for custom collection
Summary: Icon view doesn't show image for custom collection
Status: RESOLVED FIXED
Alias: None
Product: tellico
Classification: Applications
Component: general (other bugs)
Version First Reported In: 3.0.2
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Robby Stephenson
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-04-17 00:26 UTC by Robby Stephenson
Modified: 2017-04-17 00:41 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 3.0.3
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Robby Stephenson 2017-04-17 00:26:56 UTC
A custom collection (with 2 image fields) does not show the icon in the Icon View, only the ID.

See https://forum.kde.org/viewtopic.php?f=200&t=139888&sid=8fd9bef5993d6e33319b0dcf290ae4e2
Comment 1 Robby Stephenson 2017-04-17 00:41:29 UTC
Git commit 610ec7ad35c4c9aee82be7a7439cb88595a7013a by Robby Stephenson.
Committed on 17/04/2017 at 00:40.
Pushed by rstephenson into branch 'master'.

Fix a bug for showing images in icon view for custom collections

In the EntryModel, in addition to checking for the title field to show
the icon, also use column=1.

This approach is differenty from using setModelColumn in the QListView
FIXED-IN: 3.0.3

M  +4    -0    ChangeLog
M  +2    -2    src/models/entrymodel.cpp

https://commits.kde.org/tellico/610ec7ad35c4c9aee82be7a7439cb88595a7013a