Fix a bug for showing images in icon view for custom collections

In the EntryModel, in addition to checking for the title field to show
the icon, also use column=1.

This approach is differenty from using setModelColumn in the QListView

BUG: 378852
FIXED-IN: 3.0.3